[package]
name = "image-stitch"
version = "0.2.0"
authors = ["Comeza <aaron@vobe.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "*"
regex = "*"
alphanumeric-sort = "*"
indicatif = "*"
clap = { git = "https://github.com/clap-rs/clap" }
